# xml-parser

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  formatted.xml
core/include/xml_editor/: cli.hpp  graph.hpp  sna.hpp  tree.hpp  user.hpp  visualization.hpp
core/src/cli/: cli.cpp
core/src/graph/: graph.cpp
core/src/graph/user/: user.cpp
core/src/io/: file_writer.cpp
core/src/model/: graph.cpp  user.cpp
core/src/sna/: get_mutual.cpp  get_suggestions.cpp  most_active.cpp  most_influencer.cpp  search_by_topic.cpp  search_by_word.cpp
core/src/util/: util.cpp
core/src/visualization/: visualization.cpp
core/src/xml/: json.cpp  validate.cpp
gui/include/: gui.h  mainwindow.h
gui/src/: gui.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
include/xml_editor/: cli.hpp  compress.hpp  graph.hpp  gui_runner.hpp  io.hpp  tree.hpp  util.hpp  xml.hpp
resources/: RichInput.xml.txt  fixed.xml  input.xml  notFixed.xml  output.json
src/: main.cpp
src/cli/: cli.cpp
src/graph/user/: user.cpp
src/gui/: CMakeLists.txt  README V.IMP FOR QT.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/io/: file_reader.cpp  file_writer.cpp
src/testFiles/: inputToReader.xml
src/tree/: tree.cpp  treenode.cpp
src/xml/: compress.cpp  format.cpp  json.cpp  minify.cpp  parsing.cpp  validate.cpp
